# backend

./: Cargo.toml  config.json  tailwind.config.js
src/: auth.rs  config.rs  main.rs  utils.rs
src/database/: mod.rs  users.rs
src/static/: compiled.css  script.js  styles.css
src/templates/: app.hbs
