[package]
name = "kozmos"
version = "0.1.0"
edition = "2021"

[profile.dev]
lto = false

[dependencies]
ahash = "0.8"
built = "0.6"
lru = "0.11"
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = "1.29"
actix-web = "4"
handlebars = { version = "4.3", features = ["dir_source"] }
actix-files = "0.6"
serde_json = "1.0.103"
jsonwebtoken = "8"
pretty_env_logger = "0.5.0"
log = "0.4.19"
rand = "0.8.5"
rsa = "0.9.2"
